--- a/starbuzz-master/index.html
+++ b/starbuzz-master/index.html
@@ -7,8 +7,6 @@
   </head> 
 
   <body>
-
-    <div id="allcontent">
       
     <div id="header">
       <img src="images/header.gif" alt="Starbuzz Coffee header image">
@@ -38,8 +36,27 @@
       </p>
     </div>
 
+    <div id="drinks">
+      <h1>BEVERAGES</h1>
+        <p>House Blend, $1.49</p>
+        <p>Mocha Cafe Latte, $2.35</p>
+        <p>Cappuccino, $1.89</p>
+        <p>Chai Tea, $1.85</p>
+      <h1>ELIXIRS</h1>
+        <p>
+          We proudly serve elixirs brewed by our friends
+          at the Head First Lounge.
+        </p>
+        <p>Green Tea Cooler, $2.99</p>
+        <p>Raspberry Ice Concentration, $2.99</p>
+        <p>Blueberry Bliss Elixir, $2.99</p>
+        <p>Cranberry Antioxidant Blast, $2.99</p>
+        <p>Chai Chiller, $2.99</p>
+        <p>Black Brain Brew, $2.99</p>
+    </div>
 
-
+  <div id="tableContainer">
+<div id="tableRow">
     <div id="main">
       <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
       <p>
@@ -86,7 +103,8 @@
         the Starbuzz Coffee experience home.
       </p>
     </div>
-
+</div>
+</div>
 
  
     <div id="footer">
@@ -94,7 +112,7 @@
       <br>
       All trademarks and registered trademarks appearing on 
       this site are the property of their respective owners.
-    </div>
+    
 
   </div>
   </body>
